[DS-14] bulk write to elasticsearch

--- a/documentdb_to_es_loader/config_sample.json
+++ b/documentdb_to_es_loader/config_sample.json
@@ -1,5 +1,5 @@
 {
-  "MONGODB": {
+  "MONGO": {
       "HOST": "localhost",
       "USERNAME": "username",
       "PASSWORD": "password",
@@ -9,6 +9,7 @@
   "ES": {
     "HOST": "localhost",
     "USERNAME": "username",
-    "PASSWORD": "password"
+    "PASSWORD": "password",
+    "INDEX": "index"
   }
 }
