[DS-14] es_loader handle production alias

--- a/documentdb_to_es_loader/config_sample.json
+++ b/documentdb_to_es_loader/config_sample.json
@@ -10,6 +10,7 @@
     "HOST": "localhost",
     "USERNAME": "username",
     "PASSWORD": "password",
-    "INDEX": "index"
+    "INDEX_PREFIX": "index-prefix-",
+    "PRODUCTION_ALIAS": "index-production"
   }
 }
