chore: update readme and config_sample.json

--- a/documentdb_to_es_loader/config_sample.json
+++ b/documentdb_to_es_loader/config_sample.json
@@ -11,6 +11,6 @@
     "USERNAME": "username",
     "PASSWORD": "password",
     "INDEX_PREFIX": "index-prefix-",
-    "PRODUCTION_ALIAS": "index-production"
+    "PRODUCTION_ALIAS": "production-alias"
   }
 }
