--- a/web-application/backend/requirements.txt
+++ b/web-application/backend/requirements.txt
@@ -10,6 +10,7 @@ django-rest-auth==0.9.5
 django-storages==1.11.1
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
+elasticsearch==7.12.0
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.2.0
