add search endpoint

--- a/web-application/backend/.env
+++ b/web-application/backend/.env
@@ -14,3 +14,8 @@ APP_PORT=8000
 DJANGO_SU_NAME=tony
 DJANGO_SU_EMAIL=aibiertony@gmail.com
 DJANGO_SU_PASSWORD=password@123
+# Elasticsearch
+ES_HOST="host"
+ES_USERNAME="username"
+ES_PASSWORD="password"
+ES_PRODUCTION_ALIAS="alias"
