--- a/web-application/backend/requirements.txt
+++ b/web-application/backend/requirements.txt
@@ -17,6 +17,7 @@ Pillow==8.2.0
 psycopg2==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
+python-dotenv==0.17.0
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
