[DS-6] update config_sample.json and bug fixes on loading config for gcp_tp_s3_loader.py

--- a/gcp_to_s3_loader/config_sample.json
+++ b/gcp_to_s3_loader/config_sample.json
@@ -1,6 +1,6 @@
 {
     "SERVICE": {
-        "FILE_PATH": {
+        "FILE": {
             "NEW_FILES_DIR": "./new_files",
             "STAGED_FILES_DIR": "./staged_files",
             "RELEASED_FILES_DIR": "./released_files",
@@ -8,11 +8,11 @@
         }
     },
     "GCP": {
-        "GCP_CREDENTIAL": "credential_test.json",
-        "GCP_TOKEN": "token.json",
-        "GCP_SCOPE": "['https://www.googleapis.com/auth/drive.readonly']",
-        "GCP_CONNECT_PORT": "8080",
-        "GCP_QUERY_INTERVAL": ""
+        "GCP_CREDENTIAL": "",
+        "GCP_TOKEN": "",
+        "GCP_SCOPE": ["https://www.googleapis.com/auth/drive.readonly"],
+        "GCP_CONNECT_PORT": 8080,
+        "GCP_QUERY_INTERVAL": 24
     },
     "S3": {
         "S3_ACCESS_KEY": "",
