--- a/gcp_to_s3_loader/config_sample.json
+++ b/gcp_to_s3_loader/config_sample.json
@@ -17,6 +17,7 @@
     "S3": {
         "S3_ACCESS_KEY": "",
         "S3_SECRET_KEY": "",
-        "S3_BUCKET_NAME": ""
+        "S3_BUCKET_NAME": "",
+        "S3_UPLOAD_FOLDER_NAME": ""
     }
 }
