--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -15,7 +15,7 @@ jobs:
         access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         account_id: ${{ secrets.AWS_ACCOUNT_ID }}
-        repo: doc-search-engine
+        repo: dev/backend
         region: ap-southeast-1
         tags: latest,${{ github.sha }}
         path: ./web-application/backend
