--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,3 +34,20 @@ jobs:
         tags: latest,${{ github.sha }}
         path: ./web-application/frontend
         dockerfile: web-application/frontend/Dockerfile
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install ecs-deploy
+      run: |
+        python -m pip install --upgrade pip
+        pip install ecs-deploy
+
+    - name: Deploy backend to ECS
+      run: |
+        ecs deploy doc-search backend --access-key-id ${{ secrets.AWS_ACCESS_KEY_ID }} --secret-access-key ${{ secrets.AWS_SECRET_ACCESS_KEY }} --region ap-southeast-1
+
+    - name: Deploy frontend to ECS
+      run: |
+        ecs deploy doc-search frontend --access-key-id ${{ secrets.AWS_ACCESS_KEY_ID }} --secret-access-key ${{ secrets.AWS_SECRET_ACCESS_KEY }} --region ap-southeast-1
