--- a/web-application/.env
+++ b/web-application/.env
@@ -7,7 +7,7 @@ ENGINE=django.db.backends.postgresql
 DB_NAME=document_search
 POSTGRES_USER=document_search_user
 POSTGRES_PASSWORD=password
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=5432
 APP_PORT=8000
 #superuser details
