--- a/web-application/docker-compose.yml
+++ b/web-application/docker-compose.yml
@@ -32,8 +32,8 @@ services: # the different images that will be running as containers
       - ${APP_PORT} # retrieved from the .env file
     restart: "on-failure"
     depends_on: # cannot start if db service is not up and running
-      - db
-  db: # service name
+      - localhost
+  localhost: # service name
     container_name: web_database
     image: postgres
     ports:
