--- a/web-application/frontend/package.json
+++ b/web-application/frontend/package.json
@@ -14,12 +14,15 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@bachdgvn/vue-otp-input": "^1.0.8",
     "config": "^3.3.6",
     "core-js": "^3.6.2",
     "portal-vue": "^2.1.7",
+    "qrcode.react": "^1.0.1",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vue-i18n": "^8.15.3",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.1.3",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.2.11",
