--- a/web-application/frontend/package.json
+++ b/web-application/frontend/package.json
@@ -18,10 +18,10 @@
     "config": "^3.3.6",
     "core-js": "^3.6.2",
     "portal-vue": "^2.1.7",
-    "qrcode.react": "^1.0.1",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vue-i18n": "^8.15.3",
+    "vue-qrcode": "^1.0.0",
     "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.1.3",
     "vuelidate": "^0.7.6",
@@ -36,11 +36,11 @@
     "@vue/eslint-config-standard": "^5.0.1",
     "@vue/test-utils": "1.0.0-beta.30",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
     "eslint-config-vuetify": "^0.4.1",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint-plugin-vue": "^7.19.1",
     "sass": "^1.24.3",
     "sass-loader": "^8.0.0",
     "vee-validate": "^3.2.2",
