--- a/web-application/backend/requirements.txt
+++ b/web-application/backend/requirements.txt
@@ -2,16 +2,26 @@ asgiref==3.3.1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.1.7
 django-allauth==0.44.0
+django-cors-headers==3.7.0
+django-otp==1.1.1
 django-rest-auth==0.9.5
 django-storages==1.11.1
+django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==4.3.0
+djoser==2.1.0
 elasticsearch==7.12.0
 idna==2.10
+itypes==1.2.0
+Jinja2==3.0.2
+MarkupSafe==2.0.1
 oauthlib==3.1.0
 Pillow==8.2.0
 psycopg2==2.8.6
@@ -24,6 +34,8 @@ pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 six==1.15.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 sqlparse==0.4.1
+uritemplate==4.1.1
 urllib3==1.26.4
-django-cors-headers==3.7.0
